# fastapi-demo

./: Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  test.sh
pipeline/: ci.sh  ci.yml
src/: main.py
src/common/: erri.py  error.py
src/conf/: alembic_runner.py  db.py
src/conf/alembic/: env.py
src/conf/alembic/versions/: 0001_init_user_table.py
src/middleware/: auth.py
src/tests/: run_tests.sh  test_auth_middleware.py  test_user_service.py
src/user/: dto.py  handler.py  model.py  service.py
